Hack ASM again